--- a/main.css
+++ b/main.css
@@ -33,6 +33,9 @@ table {
 td, th {
     padding-right: 10px;
 }
+.highlight {
+    background-color: #ff0;
+}
 @media only screen and (min-width: 1016px) {
     body {
         width: 1000px;
