--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ table {
     margin: 0 auto;
 }
 td, th {
-    padding-right: 10px;
+    padding: 1px 8px;
 }
 .highlight {
     background-color: #ff0;
